fix Css alignment

--- a/react_client/src/styles/header.css
+++ b/react_client/src/styles/header.css
@@ -146,7 +146,7 @@ nav {
     width: 160px;
     padding: 2px 5px;
     text-align: center;
-    border: .5px ridge var(--color-1w);
+    border: .2px ridge var(--color-1w);
   }
 
   nav a:hover {
