--- a/react_client/src/styles/subscriptions.css
+++ b/react_client/src/styles/subscriptions.css
@@ -6,10 +6,10 @@
 .member-card p{
     margin-top: 2px;
 }
-
 .member-btns {
-    margin-bottom: 20px;
+    margin: 10px 0;
 }
+
 .sub-btn {
     height: 28px;
     margin-bottom: 5px;
